style fixes: language selector, fonts, spacing, logo, misc stuff

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,29 +1,40 @@
-/* .container {
-  padding: 0 2rem;
-}  */
+.container {
+  position: relative;
+  min-height: 100vh;
+}
 
 .navbar {
   background-color: #ccc;
 }
 
 .main {
-  min-height: 50vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  padding-top: 2em;
+  padding-bottom: 120px;
+}
+
+.main select {
+  background: url('../public/img/caret-down-solid.svg') 96% no-repeat;
+  background-size: 10px;
 }
 
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
+  padding: 1em;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
-  background-color: #ccc;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  font-size: 0.9em;
 }
 
 .footer a {
@@ -31,6 +42,12 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+  display: inline-block;
+  margin-left: 0.5em;
+}
+
+.footer p {
+  display: inline-block;
 }
 
 .title a {
