--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,17 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../public/fonts/OpenSans/OpenSans-Regular.ttf');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../public/fonts/OpenSans/OpenSans-SemiBold.ttf');
+  font-weight: 600;
+  font-style: normal;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Open Sans, sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+a:hover {
+  opacity: 0.7;
 }
 
 * {
@@ -77,8 +93,9 @@ select {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-  background: url(../public/img/caret-down-solid.svg) 96% no-repeat;
-  background-size: 10px;
+}
+select:hover {
+  cursor: pointer;
 }
 
 .timeline,
